--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,11 +2,11 @@
   "name": "revsync-mobile",
   "version": "1.0.0",
   "description": "RevSync Mobile App - React Native",
-  "main": "index.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "build:android": "cd android && ./gradlew assembleRelease",
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "expo": "^53.0.11",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-ble-plx": "^3.1.2",
@@ -47,7 +48,7 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.73.1",
-    "@react-native/metro-config": "^0.73.2",
+    "@react-native/metro-config": "^0.73.5",
     "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
