--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,60 +2,37 @@
   "name": "revsync-mobile",
   "version": "1.0.0",
   "main": "index.js",
-  "description": "RevSync Mobile App - React Native Tunes Marketplace",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "build:android": "cd android && ./gradlew assembleRelease",
-    "build:ios": "xcodebuild -workspace ios/RevSyncMobile.xcworkspace -scheme RevSyncMobile archive"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/cli": "^0.24.20",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/slider": "4.5.7",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
+    "expo": "~53.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "react-native-screens": "3.34.0",
+    "react-native-safe-area-context": "4.11.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "@react-native-async-storage/async-storage": "1.24.0",
     "@reduxjs/toolkit": "^2.0.1",
-    "@supabase/supabase-js": "^2.52.1",
-    "axios": "^1.6.5",
-    "expo": "~53.0.20",
-    "expo-blur": "~12.9.2",
-    "expo-constants": "~16.0.2",
-    "expo-device": "~6.0.2",
-    "expo-haptics": "~12.8.1",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-device-info": "^13.0.0",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.5",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.0.4",
+    "expo-haptics": "~13.0.1",
+    "expo-device-info": "~5.0.0",
+    "expo-linear-gradient": "~14.0.1",
+    "@expo/vector-icons": "^14.0.4",
+    "@supabase/supabase-js": "^2.39.1",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
-    "@types/react-test-renderer": "^18.0.7",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-native": "^4.1.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "react-test-renderer": "18.2.0",
+    "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "typescript": "~5.8.3"
   },
   "private": true
